# routine-quest-app

./: .cursorrules  .env.example  .gitignore  .mcp.json  .prettierrc.json  CLAUDE.md  MONOREPO.md  PROJECT_STRUCTURE.md  README.md  VIBECODING-SETUP.md  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  requirements.txt  requirements_example.txt  test_routine.py  turbo.json  다른환경_개발_연속성_가이드.txt
.changeset/: config.json
.claude/: settings.local.json
.claude/agents/: mobile-developer.md  ui-ux-designer.md
.claude/commands/: architecture-scenario-explorer.md  git-status.md  setup-monorepo.md
.cursor/: mcp.json
.cursor/rules/: .github_rules.mdc  flutter_error_prevention.mdc
.github/: branch-protection.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  vibecoding-bug.md  vibecoding-feature.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml  vibecoding.yml
.husky/: commit-msg  pre-commit
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: prd.txt
ai/: Dockerfile  package.json  requirements.txt
ai/app/: main.py
api/: Dockerfile  create_multi_step_routine.py  debug_db.py  debug_routine_detail.py  debug_routines.py  package.json  requirements.txt  routine_quest.db  test_step_add.py
api/app/: main.py
api/app/api/api_v1/: api.py
api/app/api/api_v1/endpoints/: routines.py
api/app/core/: config.py  database.py
api/app/models/: __init__.py  routine.py  user.py
client/: package.json  pubspec.yaml
client/lib/: main.dart
client/lib/core/: app.dart
client/lib/core/api/: api_client.dart
client/lib/core/config/: theme.dart
client/lib/core/router/: app_router.dart
client/lib/core/services/: app_lifecycle_service.dart  background_timer_service.dart
client/lib/features/auth/presentation/pages/: login_page.dart
client/lib/features/dashboard/presentation/pages/: dashboard_page.dart
client/lib/features/onboarding/presentation/pages/: onboarding_page.dart
client/lib/features/profile/data/: achievement_model.dart  notification_settings_model.dart  profile_model.dart  user_stats_model.dart
client/lib/features/profile/presentation/pages/: app_info_page.dart  goal_setting_page.dart  help_page.dart  notification_settings_page.dart  privacy_policy_page.dart  profile_edit_page.dart  profile_page.dart  terms_of_service_page.dart
client/lib/features/profile/services/: dashboard_data_service.dart  notification_settings_service.dart  profile_service.dart  real_notification_service.dart  routine_stats_integration.dart  unified_notification_service.dart  user_stats_service.dart  web_notification_service.dart
client/lib/features/routine/data/providers/: routine_list_provider.dart
client/lib/features/routine/presentation/pages/: create_routine_page.dart  routine_detail_page.dart  routine_list_page.dart
client/lib/features/today/data/: dummy_data.dart  routine_completion_storage.dart
client/lib/features/today/data/providers/: routine_completion_provider.dart  routine_provider.dart  routine_state_provider.dart
client/lib/features/today/domain/models/: step.dart
client/lib/features/today/presentation/pages/: today_page.dart
client/lib/features/today/presentation/widgets/: completion_summary.dart  next_step_card.dart  progress_header.dart  routine_completion_widget.dart  step_timer_widget.dart
client/lib/shared/presentation/widgets/: main_navigation.dart
client/lib/shared/services/: user_progress_service.dart
client/lib/shared/widgets/: custom_snackbar.dart
client/test/: widget_test.dart
docker/: docker-compose.yml
docs/: AUTO_START_IMPLEMENTATION.md  DEVELOPMENT-SETUP.md  GITHUB-SETUP-GUIDE.md  VIBECODING-GUIDE.md  claude-test.md  cursor-test.md  pr-demo.md  project-structure.md
scripts/: build.sh  claude-complete.sh  claude-upload.sh  cursor-complete.sh  cursor-upload.sh  dev.sh  flutter-dev.ps1  flutter-dev.sh  flutter-prod.ps1  flutter-prod.sh  lint.sh  release.sh  setup.sh  test.sh  test_notification_settings.dart  test_timer_persistence.dart  vibecoding-end.sh  vibecoding-start.sh  vibecoding-sync.sh
shared/: package.json  tsconfig.json
shared/src/: index.ts
